fix weird overflow issue on main page

--- a/public/css/faces.css
+++ b/public/css/faces.css
@@ -28,6 +28,7 @@ h1 {
 
 #main {
   color: #fff;
+  overflow: hidden;
   padding: 20px 0;
   text-align: center;
 }
